bak AJAX before

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 					<div class="link_tag">{{= $value.text}} <a href="javascript:;" class="dele_tag">×</a></div>
 				{{/each}}				
 			</div>
-			<a class="addSort" href="javascript:void(0)">设置展示产品类别<i class="caret_icon"></i>
+			<a class="addSort" href="javascript:void(0)">添加展示产品类别<i class="caret_icon"></i>
 			</a>
 		</div>
     </div>
